# stair-robot

./: MUJOCO_LOG.TXT  cost_tuner_tui.py  hexagonal_robot.xml  hexapod_env.py  hexapod_mdp.py  justfile  mppi_controller.py  pyproject.toml  run_viewer.py  test_hexapod_mppi.py  view_robot.py
src/stair_robot/: __init__.py
trajectory_opt/: __init__.py  __main__.py  config.py  optimize.py  playback.py  tune.py  utils.py
