[project]
name = "stair-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Bayer", email = "bayer.justin@googlemail.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "mujoco[mjpython]>=3.2.0",
    "mujoco-mjx>=3.3.7",
    "scipy>=1.10.0",
    "defopt>=6.4.0",
    "rich>=13.0.0",
    "seher",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
seher = { path = "/Users/bayerj/devel/seher", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
